[package]
name = "rwstresstools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rwstresstools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon" ,"unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address="0.6.5"
thiserror = "2.0.17"
tauri-plugin-store = "2"
bytebuffer="2.3.0"
lazy_static = "1.5.0"
tokio = "1.48.0"
time = "0.3.44"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
tauri-plugin-udp = "0.1.2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
rand = "0.9.2"
log = "0.4.28"
[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"
